Changed tagged langauge from objc to swift

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-.swift linguist-detectable=true
-.objc linguist-detectable=false
+*.swift linguist-detectable=true
+*.objc linguist-detectable=false
